--- a/wwwroot/css/post_details.css
+++ b/wwwroot/css/post_details.css
@@ -1,4 +1,10 @@
-.post-title {
+.post-title div {
+    width: 75vw;
+    min-width: 500px;
+    margin: auto;
+}
+
+.post-title b{
     color: aliceblue;
     font-size: 72px;
     display: flex;
@@ -7,6 +13,7 @@
     margin-bottom: 20px;
 
     text-align: center;
+    overflow-wrap: anywhere;
 }
 /* body{
     padding-top: 80px;
@@ -128,6 +135,7 @@
     font-size: 24px;
     
     overflow-wrap: anywhere;
+    white-space: pre-line;
 }
 .post-image {
     border-radius: 20px;
