--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -151,6 +151,7 @@ header{
     border-radius: 8px;
 
     position: relative;
+    overflow-wrap: anywhere;
 }
 .notif-item:hover {
     background-color: rgba(255, 255, 255, 0.25);
